tests/samples/invalid/assign_to_array_slice.pn
fn foo(x: []i32)
{
	x[0] = 400;
}

fn main() -> i32
{
	var x: []i32 = [17, 50];
	foo(x);
	return: x[0]
}
